getting swagger docs to work
